[project]
authors = [{ name = "Muspi Merol", email = "me@muspimerol.site" }]
dependencies = [
    "numpy>=1.25",
    "imageio>=2.32",
    "typer>=0.9",
    "msgspec>=0.18",
    "fastapi[all]>=0.104",
    "httpx[http2]>=0.25",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
cli = { call = "src.main:app" }
enc = { composite = ["cli encode"] }
dec = { composite = ["cli decode"] }
fmt = { composite = ["black .", "isort ."] }
dev = "uvicorn src.server:app --reload"

[tool.pdm.dev-dependencies]
dev = ["isort>=5", "black>=23"]

[tool.black]
line-length = 200

[tool.isort]
profile = "black"
